--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/d3": "^7.4.3",
+    "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^6.7.0",
@@ -33,7 +34,8 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
