--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@rive-app/react-canvas": "^4.18.3",
     "@types/d3": "^7.4.3",
     "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
