problem preloader+etl, problem optimizer, gemini create problem fixed, reviews moved to standalone service,

--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -29,22 +29,27 @@
     "@rive-app/react-canvas": "^4.18.3",
     "@types/d3": "^7.4.3",
     "@types/three": "^0.174.0",
+    "cannon-es": "^0.20.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^6.7.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.4.7",
+    "konva": "^9.3.20",
     "lucide-react": "^0.473.0",
+    "matter-js": "^0.20.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-konva": "^19.0.3",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.174.0"
   },
   "devDependencies": {
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
