--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@p5-wrapper/react": "^4.4.2",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -39,8 +40,11 @@
     "d3": "^6.7.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.6.3",
+    "highlight.js": "^11.11.1",
     "leva": "^0.10.0",
     "lucide-react": "^0.473.0",
+    "marked": "^15.0.11",
+    "marked-highlight": "^2.2.1",
     "matter-js": "^0.20.0",
     "next": "14.0.4",
     "p5": "^1.11.3",
