--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@p5-wrapper/react": "^4.4.2",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.2",
