--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -29,9 +29,6 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
-    "@react-three/postprocessing": "^2.19.1",
     "@rive-app/react-canvas": "^4.18.3",
     "@types/d3": "^7.4.3",
     "@types/three": "^0.174.0",
@@ -40,6 +37,7 @@
     "clsx": "^2.1.1",
     "d3": "^6.7.0",
     "date-fns": "^3.6.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.6.3",
     "highlight.js": "^11.11.1",
     "leva": "^0.10.0",
@@ -55,8 +53,7 @@
     "react-p5": "^1.4.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.153.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.8",
