--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -33,6 +33,7 @@
     "@types/d3": "^7.4.3",
     "@types/three": "^0.174.0",
     "cannon-es": "^0.20.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^6.7.0",
@@ -52,10 +53,12 @@
     "react-dom": "^18.2.0",
     "react-p5": "^1.4.1",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/matter-js": "^0.19.8",
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
