--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rive-app/react-canvas": "^4.18.3",
+    "@tanstack/react-query": "^5.90.5",
     "@types/d3": "^7.4.3",
     "@types/three": "^0.174.0",
     "cannon-es": "^0.20.0",
