build(deps): optimize docker build caching
By copying and installing `requirements.txt` before copying the rest of the application code, the Docker build can leverage layer caching more effectively.

This ensures that the dependencies are only re-installed when `requirements.txt` changes, rather than on every code change, significantly speeding up the build process.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,9 @@ RUN apt-get update && apt-get install -y \
     g++ \
     && rm -rf /var/lib/apt/lists/*
 
+# Copy requirements first (for better caching)
+COPY requirements.txt .
+
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -18,7 +21,6 @@ COPY . .
 
 # Expose port 8080 (Cloud Run default)
 EXPOSE 8080
-
 
 # Set environment variables
 ENV PORT=8080
