--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,15 @@ secrets/
 private-config/
 archive/
 
-# Ignore Python bytecode
+# Ignore Python bytecode and virtual environments
 __pycache__/
 *.py[cod]
+venv/
+env/
+.venv/
+ENV/
+.Python
+*.egg-info/
 .vscode/
 .history/
 *.code-workspace
