--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,36 +1,217 @@
-# Core FastAPI and server
-fastapi==0.115.6
+# ============================================================================
+# CORE WEB FRAMEWORK
+# ============================================================================
+fastapi==0.115.7
 uvicorn[standard]==0.34.0
 python-multipart==0.0.20
-websockets==14.1
+websockets==14.2
+starlette==0.45.3
+sse-starlette==2.3.3
 
-# Pydantic for data validation
-pydantic==2.10.6
-pydantic-settings==2.7.0
+# ============================================================================
+# DATA VALIDATION & CONFIGURATION
+# ============================================================================
+pydantic==2.11.10
+pydantic_core==2.33.2
+pydantic-settings==2.7.1
+email_validator==2.2.0
 
-# Azure Services
-azure-cognitiveservices-speech==1.40.0
+# ============================================================================
+# AZURE SERVICES
+# ============================================================================
+azure-cognitiveservices-speech==1.42.0
 azure-core==1.32.0
 azure-cosmos==4.9.0
+azure-storage-blob==12.25.1
 
-# Google Cloud and Gemini AI
-google-generativeai==0.8.4
-google-cloud-bigquery==3.28.0
-google-api-python-client==2.149.0
-google-auth==2.35.0
+# ============================================================================
+# GOOGLE CLOUD PLATFORM
+# ============================================================================
+# AI & Gemini
+google-genai==1.16.1
+google-generativeai==0.8.3
+google-ai-generativelanguage==0.6.10
+google-api-python-client==2.159.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-adk==0.3.0
 
-# Firebase Admin (for authentication)
-firebase-admin==6.6.0
+# BigQuery
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
 
-# Scientific computing (if needed by your services)
-numpy==2.2.3
-pandas==2.2.3
+# Firestore (Real-time Analytics)
+google-cloud-firestore==2.21.0
 
-# Utilities
-python-dotenv==1.0.1
-cachetools==5.5.0
-aiofiles==24.1.0
+# Speech Services
+google-cloud-speech==2.30.0
 
-# HTTP clients
+# Storage & Resource Management
+google-cloud-storage==2.19.0
+google-cloud-resource-manager==1.14.2
+google-cloud-secret-manager==2.23.3
+
+# AI Platform
+google-cloud-aiplatform==1.91.0
+
+# Tracing & Monitoring
+google-cloud-trace==1.16.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-gcp-trace==1.9.0
+opentelemetry-resourcedetector-gcp==1.9.0a0
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+
+# Google API Common
+google-api-core==2.24.0
+googleapis-common-protos==1.66.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+grpc-google-iam-v1==0.14.2
+grpcio==1.70.0
+grpcio-status==1.70.0
+proto-plus==1.25.0
+protobuf==5.29.3
+
+# ============================================================================
+# FIREBASE SERVICES
+# ============================================================================
+firebase-admin==6.9.0
+CacheControl==0.14.3
+
+# ============================================================================
+# AI/ML SERVICES
+# ============================================================================
+# Anthropic Claude AI
+anthropic==0.45.0
+
+# ============================================================================
+# AUDIO PROCESSING
+# ============================================================================
+PyAudio==0.2.14
+sounddevice==0.5.1
+pydub==0.25.1
+
+# ============================================================================
+# IMAGE & VIDEO PROCESSING
+# ============================================================================
+Pillow==11.1.0
+opencv-python==4.11.0.86
+mss==10.0.0
+
+# ============================================================================
+# DATA PROCESSING & ANALYSIS
+# ============================================================================
+numpy==1.26.4
+pandas==2.2.0
+scipy==1.15.2
+
+# ============================================================================
+# DATABASE DRIVERS
+# ============================================================================
+# PostgreSQL (Legacy - marked as deprecated in code)
+asyncpg==0.30.0
+psycopg2==2.9.10
+SQLAlchemy==2.0.40
+greenlet==3.2.1
+
+# ============================================================================
+# HTTP CLIENTS & ASYNC
+# ============================================================================
 httpx==0.28.1
+httpx-sse==0.4.0
+httpcore==1.0.7
+httptools==0.6.4
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+aiohttp==3.11.18
+aiohappyeyeballs==2.6.1
+aiosignal==1.3.2
 requests==2.32.3
+urllib3==2.3.0
+certifi==2024.12.14
+
+# ============================================================================
+# AUTHENTICATION & SECURITY
+# ============================================================================
+Authlib==1.5.2
+PyJWT==2.10.1
+cryptography==44.0.2
+cffi==1.17.1
+pycparser==2.22
+
+# ============================================================================
+# UTILITIES
+# ============================================================================
+python-dotenv==1.0.0
+cachetools==5.5.1
+tenacity==9.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+tzdata==2025.1
+tzlocal==5.3.1
+click==8.1.8
+typer==0.12.3
+shellingham==1.5.4
+rich==13.7.0
+
+# ============================================================================
+# TEXT & NLP PROCESSING
+# ============================================================================
+nltk==3.9.1
+textstat==0.7.3
+pyphen==0.17.2
+regex==2024.11.6
+
+# ============================================================================
+# DATA FORMATS & SERIALIZATION
+# ============================================================================
+PyYAML==6.0.2
+python-json-logger==2.0.7
+isodate==0.7.2
+msgpack==1.1.1
+
+# ============================================================================
+# ASYNC & CONCURRENCY
+# ============================================================================
+anyio==4.8.0
+sniffio==1.3.1
+exceptiongroup==1.2.2
+
+# ============================================================================
+# TYPE CHECKING & VALIDATION
+# ============================================================================
+annotated-types==0.7.0
+typing_extensions==4.12.2
+typing-inspection==0.4.2
+docstring_parser==0.16
+
+# ============================================================================
+# OTHER DEPENDENCIES
+# ============================================================================
+attrs==25.3.0
+Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.7.0
+frozenlist==1.6.0
+idna==3.10
+jiter==0.8.2
+joblib==1.4.2
+markdown-it-py==4.0.0
+mdurl==0.1.2
+multidict==6.4.4
+packaging==25.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+rsa==4.9
+six==1.17.0
+tqdm==4.67.1
+watchfiles==1.0.4
+wrapt==1.17.2
+yarl==1.20.0
+httplib2==0.22.0
+charset-normalizer==3.4.1
+shapely==2.1.0
+graphviz==0.20.3
