--- a/my-tutoring-app/vercel.json
+++ b/my-tutoring-app/vercel.json
@@ -4,10 +4,11 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXT_PUBLIC_API_URL": "@api-url",
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "@firebase-api-key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@firebase-auth-domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@firebase-project-id",
+    "NEXT_PUBLIC_API_BASE_URL": "https://mountamo-education-869605204378.us-east5.run.app",
+    "NEXT_PUBLIC_WS_URL": "wss://mountamo-education-869605204378.us-east5.run.app",
+    "NEXT_PUBLIC_FIREBASE_API_KEY": "AIzaSyBs3SSRurLp1cS0LrpbfLwfmWXlnMxjmv8",
+    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "mountamo-tutor-h7wnta.firebaseapp.com",
+    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "mountamo-tutor-h7wnta",
     "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@firebase-storage-bucket",
     "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@firebase-messaging-sender-id",
     "NEXT_PUBLIC_FIREBASE_APP_ID": "@firebase-app-id"
