--- a/my-tutoring-app/vercel.json
+++ b/my-tutoring-app/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd my-tutoring-app && npm run build",
-  "outputDirectory": "my-tutoring-app/.next",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
