--- a/my-tutoring-app/vercel.json
+++ b/my-tutoring-app/vercel.json
@@ -2,12 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_API_BASE_URL": "https://mountamo-education-869605204378.us-east5.run.app",
-    "NEXT_PUBLIC_WS_URL": "wss://mountamo-education-869605204378.us-east5.run.app",
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "AIzaSyBs3SSRurLp1cS0LrpbfLwfmWXlnMxjmv8",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "mountamo-tutor-h7wnta.firebaseapp.com",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "mountamo-tutor-h7wnta"
-  }
+  "regions": ["iad1"]
 }
