--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -41,6 +41,8 @@ steps:
       - '--allow-unauthenticated'
       - '--set-env-vars'
       - 'PROJECT_NAME=AI Tutor API'
+      - '--set-secrets'
+      - 'FIREBASE_ADMIN_CREDENTIALS_JSON=firebase-admin-credentials:latest'
       - '--max-instances'
       - '10'
       - '--memory'
