feat(auth): load Firebase credentials from mounted Cloud Run secrets
This change enhances the Firebase initialization logic to prioritize loading credentials from a mounted secret volume in Cloud Run. This is the recommended and most secure method for handling secrets in Google Cloud.

The credential loading order is now:
1. Mounted secret file (e.g., `/secrets/firebase-admin-credentials/latest`)
2. `FIREBASE_ADMIN_CREDENTIALS_JSON` environment variable
3. Local file path for development

The `cloudbuild.yaml` file has been updated to remove the previous method of setting secrets via environment variables (`--set-secrets`), as Cloud Run services will now access the secret via the mounted volume. Additionally, the deployment region has been updated.

--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -35,14 +35,12 @@ steps:
       - '--image'
       - 'gcr.io/$PROJECT_ID/ai-tutor-backend:$COMMIT_SHA'
       - '--region'
-      - 'us-central1'
+      - 'us-east5'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
       - 'PROJECT_NAME=AI Tutor API'
-      - '--set-secrets'
-      - 'FIREBASE_ADMIN_CREDENTIALS_JSON=firebase-admin-credentials:latest'
       - '--max-instances'
       - '10'
       - '--memory'
