--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@p5-wrapper/react": "^4.4.2",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
