--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -58,7 +58,8 @@
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
