refactor(lumina): decouple gemini client and server logic
- Add `server-only` dependency to enforce server-side execution boundaries
- Extract Gemini client instantiation into dedicated `geminiClient` modules
- Update UI components to import from `geminiClient-api` instead of direct service files
- Refactor existing service files to utilize the shared client instance
- Prepare architecture for secure API key handling via server components/routes

--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-p5": "^1.4.1",
     "recharts": "^2.15.0",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
