--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -30,10 +30,11 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@rive-app/react-canvas": "^4.18.3",
     "@tanstack/react-query": "^5.90.5",
     "@types/d3": "^7.4.3",
-    "@types/three": "^0.174.0",
     "cannon-es": "^0.20.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -60,7 +61,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.181.2"
+    "three": "^0.160.1"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
@@ -68,6 +69,7 @@
     "@types/node": "^20.17.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.182.0",
     "@types/ws": "^8.5.14",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
