--- a/my-tutoring-app/package.json
+++ b/my-tutoring-app/package.json
@@ -35,6 +35,7 @@
     "@rive-app/react-canvas": "^4.18.3",
     "@tanstack/react-query": "^5.90.5",
     "@types/d3": "^7.4.3",
+    "@types/html2canvas": "^0.5.35",
     "cannon-es": "^0.20.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +45,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.6.3",
     "highlight.js": "^11.11.1",
+    "html2canvas": "^1.4.1",
     "leva": "^0.10.0",
     "lucide-react": "^0.473.0",
     "marked": "^15.0.11",
